feat: Enhance application with H2 database support and improve error handling
- Added H2 database dependency for testing in both Gradle and Maven configurations.
- Improved error handling in various services, ensuring better validation and exception management.
- Refactored code to trim input values and handle null checks for user and room IDs.
- Updated logging to provide clearer warnings and error messages.
- Cleaned up unnecessary comments and improved code readability across multiple services.